--- a/localisation/english/MD_counter_ui_l_english.yml
+++ b/localisation/english/MD_counter_ui_l_english.yml
@@ -22,6 +22,7 @@ l_english:
  TOPBAR_PROTESTS_TEXT: "[protest_strength_TT]"
  TOPBAR_FOREIGN_INFLUENCING_TEXT: "[This.GetTopbarSelectedInfluence]"
  TOPBAR_EUROSCEPTICISM_TEXT: "[THIS.GetTopbarSelectedEuroscepticsm]"
+ TOPBAR_FOREIGN_INVESTMENT_LIMIT: "[?active_projects|0Y]/15"
 
  TOPBAR_INFO_LIST: "[GetTopbarListText]"
  TOPBAR_INFO_LIST_TOOLTIP: "[GetTopbarListTooltip]\n\nMenu Option: [?i]"
@@ -44,6 +45,7 @@ l_english:
  TOPBAR_PROTESTS_TITLE: "Protest Strength"
  TOPBAR_FOREIGN_INFLUENCING_TITLE: "Foreign Influencing"
  TOPBAR_EUROSCEPTICISM_TITLE: "European Union"
+ TOPBAR_FOREIGN_INVESTMENT_TITLE: "Foreign Investment"
 
  TOPBAR_LIST_CASUALTIES_TOOLTIP: "Casualties"
  TOPBAR_LIST_SURRENDER_TOOLTIP: "Surrender Progress"
@@ -64,6 +66,7 @@ l_english:
  TOPBAR_LIST_PROTESTS_TOOLTIP: "§YProtest Strength§! from Expected Spending mechanic"
  TOPBAR_LIST_FOREIGN_INFLUENCING_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedInfluenceTooltip]§!\n(£click_right §YR Click§!) §YRight-Click§! to change"
  TOPBAR_LIST_EUROSCEPTICSM_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedEuroscepticsmTooltip]§!\n(£click_right §YR Click§!) §YRight-Click§! to change"
+ TOPBAR_LIST_FOREIGN_INVESTMENT_TOOLTIP: "Foreign Investment slots"
 
  TOPBAR_RESOURCE_TOOLTIP: "\n\n(£click_right §YR Click§!) §YRight-Click§! to §Yclose§!"
  TOPBAR_CASUALTIES_TOOLTIP: "Casualties"
@@ -80,5 +83,6 @@ l_english:
  TOPBAR_PROTESTS_TOOLTIP: "Protest Strength"
  TOPBAR_FOREIGN_INFLUENCE_TOOLTIP: "Foreign Influence"
  TOPBAR_FOREIGN_INFLUENCE_DEFENSE_TOOLTIP: "Foreign Influence Defense"
+ TOPBAR_FOREIGN_INVESTMENT_LIMIT_TOOLTIP: "Foreign Investment Limit"
 
  NO_INFO_SELECTED: "No counter selected.\n----------------------\n§YRight-Click§! to close."
