--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -1721,7 +1721,7 @@
  focus_ARM_new_ayb_tt: "This will grant us §G+5% Research speed§!, §R-10% Construction speed§!, §R-25% Monthly population§!\n"
  focus_ARM_MGUyer_tt: "This will grant us §G+5% Research speed§!, §R-10% Construction speed§!, §R-25% Monthly population§!\n"
  focus_ARM_EU_educ_deal_tt: "This will grant us §G+5% Research speed§!, §R-10% Construction speed§!, §R-25% Monthly population§!\n"
- ARM_brain_drain_modifier: "Armenian brain drain"
+ ARM_brain_drain_modifier: "Armenian Brain Drain"
  ARM_brain_drain_modifier_reduce_tt: "Negative effects from §YArmenian brain drain§! will be reduced.\n"
  ARM_marxism_victory: "Triumph of Marxism"
 
