--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -856,6 +856,7 @@
  EU_voting_mission_focus_EU611_QMV_result: "Internal Enlargement Voting Result"
  EU_voting_mission_focus_EU611_QMV_result_desc: "The member states have voted on Internal Enlargement. Time to show the result."
 
+ eu_voting_minor_popup_tt: "If you wish to no longer receive these notifications, you can deselect minor popups in your decisions menu. NOTE: This will also hide other events. Not specifically European Union popups regarding voting or when the council or parliament are ready for session."
  EUvote.1.t: "EU Parliament Vote Started"
  EUvote.1.d: "The EU Parliament has brought a measure up for vote! Check the Parliament section of the EU to help review or pass the measure."
  EUvote.1.a: "To the Polls!"
@@ -863,6 +864,14 @@
  EUvote.2.t: "EU Council Vote Started"
  EUvote.2.d: "The EU Council has started to vote on a new law! Check the Euro Voting section to place your vote, and influence other nations!"
  EUvote.2.a: "To the Polls!"
+
+ EUvote.3.t: "EU Parliament is Ready for Session"
+ EUvote.3.d: "The European Parliament is ready for session. You can choose to propose something to the European Parliament or the AI will propose a bill to session in two weeks."
+ EUvote.3.a: "To the Polls!"
+
+ EUvote.4.t: "EU Council Vote is Ready for Session"
+ EUvote.4.d: "The European Council is ready for session. You can choose to propose something to the European Council or the AI will propose a bill to session in two weeks."
+ EUvote.4.a: "To the Polls!"
 
  ### EU-Turkey deal ###
  EUevent.2.t: "EU-Turkey deal"
