--- a/localisation/english/MD_internal_factions_l_english.yml
+++ b/localisation/english/MD_internal_factions_l_english.yml
@@ -6,7 +6,7 @@
  # Author: Birdy, Killerrabbit
 
  # Common Internal Factions Text
- opinion_tick_rate_tt: "The faction's opinion will slowly tick down by §Y0.5§! when over §Y50§! opinion.\n\n"
+ opinion_tick_rate_tt: "The faction's opinion will slowly tick down by §Y0.5§! Monthly when over §Y50§! opinion.\n\n"
 
  # Economic Factions:
  # Small Medium & Business Owners
@@ -653,6 +653,7 @@
  internal_factions_events.27.d: "The military industry in our nation is thriving under the [ROOT.GetLeader] administration. We can look to fund this absolute boom in our arms industry with a small investment into the defense sector or we can applaud them publicly. What should we do?"
  internal_factions_events.27.o1: "Subsidize the Military Industry."
  internal_factions_events.27.o2: "Wonderful. Talk them up!"
+ internal_factions_events.27.o3: "That is their job."
  internal_factions_events.28.t: "Industrial Conglomerates Protests Lack of Industrialization"
  internal_factions_events.28.d: "The leaders of the Industrial Conglomerates has come to [ROOT.GetLeader] complaining about the lack of recent industrialization in the country. They believe that the industrial sector of the country has been neglected and they wish for further investment in the industrial sector. They have directly cited our overt focus on the Agricultural side of the country's economy. How should we respond?"
  internal_factions_events.28.o1: "Fuck the Industrialists."
