--- a/localisation/english/replace/replaced_from_vanilla_buildings_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_buildings_l_english.yml
@@ -14,7 +14,7 @@
  #3
  internet_station: "Network Infrastructure"
  internet_station_plural: "Network Infrastructure"
- internet_station_desc: "§YNetwork Infrastructure§! are tall structures used in the telecommunication and radio communication fields in order to push transmissions across great distances or underground fiber optic cables and cloud computing systems. \n\nEach level of §YNetwork Infrastructure§! improves local productivity growth speed by §G+5.00%§!."
+ internet_station_desc: "§YNetwork Infrastructure§! are tall structures used in the telecommunication and radio communication fields in order to push transmissions across great distances or underground fiber optic cables and cloud computing systems.\n\nEach level of §YNetwork Infrastructure§! improves local productivity growth speed by §G+5.00%§!."
  #4
  dockyard: "Naval Yard"
  dockyard_plural: "Naval Yards"
@@ -81,7 +81,7 @@
  #19
  rail_way: "Railways"
  rail_way_plural: "Railways"
- rail_way_desc: "Railways are used to connect Supply Hubs together to allow drawing of supply far from your capital."
+ rail_way_desc: "Railways are used to connect Supply Hubs together to allow drawing of supply far from your capital.\n\nEach level of §YRailways§! improves local productivity growth speed by §G+4.00%§!."
  #20
  fossil_powerplant: "Fossil Fuel Powerplant"
  fossil_powerplant_plural: "Fossil Fuel Powerplants"
