--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,8 @@ v1.10.4
  Content:
   - Added "Overlord Subsidies" Diplomatic Action
   - Changed the focus "New CAS Aircraft" to "Joint Strike Fighter"
+  - Added an option to keep Saddam after 2009, if you choose to do so, he will age & Get Alzheimer's
+  - Added 20 or so events relating to Saddam Hussein's Alzheimer's (If you keep him around)
 
  Localization:
   - Fixed the misspelling of the "Norwegian Armed Forces" in the Norwegian tree
