starting work on morocco

--- a/localisation/english/MD_focus_MOR_l_english.yml
+++ b/localisation/english/MD_focus_MOR_l_english.yml
@@ -12,7 +12,7 @@ l_english:
  MOR_royal_family_decrees: "Royal Family Decrees"
  MOR_royal_family_decrees_desc: "The Royal Family in Morocco has the ability to decree changes to the country by and large to make sweeping changes within their purview. The decrees are powerful decisions that the government can take to change the country for the better... or for the worse."
  MOR_status_of_the_amazigh_languages: "Status of the Amazigh Languages"
- MOR_status_of_the_amazigh_languages_desc: ""
+ MOR_status_of_the_amazigh_languages_desc: "The various Amazigh languages in our great country currently are not protected by any measure of the word. If we do not pursue a more public policy of providing assistance to those who do not speak Arabic or French as their main language we could further disenfranchise our people."
  MOR_the_power_of_amnesty: "The Power of Amnesty"
  MOR_the_power_of_amnesty_desc: ""
  MOR_the_reform_of_mudawana: "The Reform of Mudawana"
@@ -20,7 +20,7 @@ l_english:
  MOR_yennayer: "Yennayer"
  MOR_yennayer_desc: "Yennayer, the first day of the Berber New Year, is celebrated on January 12th of every year. The King believes that we should codify the day as a national holiday, further keeping the Amazigh well in line with the current standing government."
  MOR_enshrine_hassanya_languages: "Enshrine the Hassaniya Language"
- MOR_enshrine_hassanya_languages_desc: ""
+ MOR_enshrine_hassanya_languages_desc: "Hassaniya Arabic is the language group spoken primarily by Mauritanian Arabs and the people of Sahrawi. It was spoken primarily by the Beni Hassan Bedouin tribes of Yemeni origin and now it is widely spoken and has outright replaced the native Berber language of the area. Enshrining the language as a publicly recognized language, potentially a national language will be seen favorably amongst our Berber brothers and sisters."
  MOR_form_the_ier: "Form the IER"
  MOR_form_the_ier_desc: ""
  MOR_head_of_council_of_government: "Head of the Council of Government"
@@ -1048,10 +1048,13 @@ l_english:
  MOR_and_the_rest_of_africa: "And The Rest Of Africa "
  MOR_and_the_rest_of_africa_desc: "And The Rest Of Africa"
 
+ # Country Flags
+ MOR_the_royal_family_executed: "The Royal Moroccan Family Has Been Executed"
+
  # Moroccan Decisions
  # The Role of the King --- Decisions
  MOR_the_moroccan_role_of_the_king_balance_of_power_category: "The Role of the King"
- MOR_the_moroccan_role_of_the_king_balance_of_power_category_desc: ""
+ MOR_the_moroccan_role_of_the_king_balance_of_power_category_desc: "The role of the King is one fraught with many choices and responsibilities in Morocco. Despite the amount of power the parliament has within the country, the King still withholds a series of powers that allow it to effectively maintain the strangle grip on the country."
  MOR_monarchist_mid_range: "A Balanced Approach"
  MOR_reformist_monarch_left_side: "Pro-Democratic King"
  MOR_absolutist_monarch_right_side: "The Absolutist King"
@@ -1061,3 +1064,10 @@ l_english:
  morocco.400.d: "Early today several bombings have taken place across several sites in the city of Casablanca. Twelve suicide bombers with bombs placed in their backpacks set off explosions in the Casa de España, Hotel Farah, the Jewish Alliance of Casablanca, and several other sites near the Belgian consulate and the old Jewish cemetery. The attacks claimed the lives of forty-five people including the twelve suicide bombers and injured at least a hundred more civilians. It is speculated the recent rise of Salafist preachers in the country, many of whom are veterans of the Soviet-Afghan War, have begun to radicalize more and more as time progresses. The GCIM and al-Qaeda have declared their responsibility for the attacks with the attack being targeted towards Jews in the city despite none of the victims being Jewish. Some local groups are stating that this is due to the rise of what is known as \"Shanty Towns\" in the city paving the way for radicalization amongst the impoverished people of the city and Morocco."
  morocco.400.a: "A Tragedy..."
  morocco.400.b: "Pay for the Funerals.."
+
+ morocco_bop.1.t: "The Title of the King"
+ morocco_bop.1.d: "The title of our monarch is one of great importance. Although we have held the title of King for as long as we can recall. It may be time to declare ourselves a title more fitting for our future goals. The options very and each one will help us decide what type of monarch we wish to be. Will we remain a King maintaining the Pro-Western status quo? Will revise and become a Sultan?\n\nRegardless of the choice the name will be fit for our ruler and will become something all of the Moroccan people can rally behind."
+ morocco_bop.1.a: "Remain a King"
+ morocco_bop.2.b: "The Title of Sultan"
+ morocco_bop.2.c: "The Title of Shah"
+ morocco_bop.2.e: "The Title of Caliph"
