--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -4673,7 +4673,7 @@
  BAH.Nat_Autocracy: "£generic_Nat_Autocracy_small Royal Bahamas Defence Force (RBDF)"
  BAH.Nat_Autocracy_desc: ""
  BAL.Neutral_Autocracy: "£BAL_neutral_autocracy Antibalaka"
- BAL.Neutral_Autocracy: "£BAL_neutral_autocracy"
+ BAL.Neutral_Autocracy_icon: "£BAL_neutral_autocracy"
  BAL.Neutral_Autocracy_desc: ""
  BAN.conservatism: "£generic_conservatism_small Jatiya Party"
  BAN.conservatism_desc: ""
